2024/06/28
1. 对齐底层PullBufInfo数据是指帧数据中，结果字段。修改所有响应处理逻辑
2024/07/26
1. 修改制作产品数据实体结构，从ProductInfo修改为ProductProfile。
2. 提供返回字段id映射表，对应具体结果。
3. 明确每个下发命令的指令字段是对应的，send指令多少，reply指令会对应多少。