@@ -88,9 +88,6 @@ fun SerialTest(viewModel: SerialPortViewModel = hiltViewModel()) {
                             is ReceivedData.ErrorData -> {
                                 info = "ErrorData: ${it.info}, need reboot ${it.reboot}"
                             }
-                            is ReceivedData.PartData -> {
-                                info = it.info
-                            }
                             is ReceivedData.HeartBeat -> {
                                 info = "HeartBeatData: ${it.info}, need reboot ${it.reboot}, " +
                                         "status ${it.heartbeatStatus}"
