@@ -1,0 +1,5 @@
+package com.inno.serialport.function.data
+
+interface Subscriber {
+    fun onDataReceived(data: Any)
+}
