@@ -1,0 +1,22 @@
+package com.inno.serialport.utilities
+
+//=============================INFO===============================
+const val LEFT_BREWING = 1000
+const val RIGHT_BREWING = 1001
+const val LEFT_BREWING_COMPLETE = 1002
+const val RIGHT_BREWING_COMPLETE = 1003
+const val LEFT_FINISHED = 1004
+const val RIGHT_FINISHED = 1005
+const val LEFT_BOILER_TEMPERATURE = 1006
+const val RIGHT_BOILER_TEMPERATURE = 1007
+
+//============================ERROR===============================
+const val FRONT_VAT_EMPTY = 2000
+const val BACK_VAT_EMPTY = 2001
+const val LEFT_GRINDER_ERROR = 3000
+const val RIGHT_GRINDER_ERROR = 3001
+const val LEFT_BOILER_ERROR = 3002
+const val RIGHT_BOILER_ERROR = 3003
+const val LEFT_EXTRACT_ERROR = 3004
+const val RIGHT_EXTRACT_ERROR = 3005
+const val STREAM_BOILER_ERROR = 3006
