@@ -1,0 +1,7 @@
+package com.inno.serialport.utilities
+
+enum class ReceivedDataType {
+    ERROR,
+    HEARTBEAT,
+    MAKE_DRINK,
+}
